<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="413dp"
        android:layout_height="732dp"
        android:background="@drawable/kwiat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </RelativeLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:background="@color/yellow"
        android:text="@string/piaty_tekst"
        android:textColor="#FF0000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginEnd="150dp"
        android:background="@color/brown"
        android:text="@string/pierwszy_tekst"
        android:textColor="#FF0000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="222dp"
        android:layout_height="38dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="100dp"
        android:background="@color/yellow"
        android:text="@string/moj_tekst"
        android:textColor="#FF0000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="208dp"
        android:layout_height="41dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:background="@color/purple_200"
        android:text="@string/drugi_tekst"
        android:textColor="#FF0000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="217dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:background="@color/zielony_zarowa"
        android:text="@string/trzeci_tekst"
        android:textColor="#FF0000"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="213dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:background="@color/moj1"
        android:text="@string/czwarty_tekst"
        android:textColor="#FF0000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>